samples/_failures_safe/1761597779_dadd6a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_584610f5.c: In function ‘main’:
./samples/SAFE/__tmp_584610f5.c:154:5: error: expected declaration or statement at end of input
  154 |     print_buffer(&decompressed_buffer);
      |     ^~~~~~~~~~~~
